# jsbsim_with_ts

./: .gitignore
typescript/: API_REFERENCE.md  CMakeLists.txt  DEVELOPMENT.md  INTEGRATION.md  REACT_INTEGRATION.md  README.md  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json
typescript/.github/workflows/: deploy-cdn.yml
typescript/data/: c172x-basic.xml
typescript/examples/: basic-simulation.js  browser-example.html  flight-controls-demo.js
typescript/scripts/: aircraft-loader.js  dev-server.js
typescript/src/: FGInput_fixed.cpp  FGOutput_fixed.cpp  index.ts  jsbsim_binding.cpp  pre.js  strutils_fixed.cxx
typescript/tests/: aircraft-controls.test.ts  jsbsim.test.ts  setup.ts
